Minha página GitHub 1.0

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="">
+    <head>
+        <meta charset="utf-8">
+            <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+            <meta content="width=device-width, initial-scale=1" name="viewport"/>
+            <title>
+                Thiago Rodrigues
+            </title>
+            <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+            <!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->
+        </meta>
+    </head>
+    <body>
+        <script src="//code.jquery.com/jquery.js">
+        </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
+        </script>
+    </body>
+</html>
