Minha página GitHub 1.1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
             <title>
                 Thiago Rodrigues
             </title>
-            <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+            <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+            <link href="assets/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet"/>
             <!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -15,9 +16,81 @@
         </meta>
     </head>
     <body>
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+                        <span class="sr-only">
+                            Toggle navigation
+                        </span>
+                        <span class="icon-bar">
+                        </span>
+                        <span class="icon-bar">
+                        </span>
+                        <span class="icon-bar">
+                        </span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        Brand
+                    </a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#">
+                                Link
+                            </a>
+                        </li>
+                        <li class="dropdown">
+                            <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button">
+                                Dropdown
+                                <span class="caret">
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#">
+                                        Action
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Another action
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Something else here
+                                    </a>
+                                </li>
+                                <li class="divider" role="separator">
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Separated link
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="well">
+                        <img alt="Thiago Rodrigues" class="" src=""/>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                </div>
+            </div>
+        </div>
         <script src="//code.jquery.com/jquery.js">
         </script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
+        <script src="bootstrap/js/bootstrap.min.js">
         </script>
     </body>
 </html>
