Minha página GitHub 1.2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             </title>
             <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
             <link href="assets/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet"/>
+            <link href="assets/shared/css/custom.css" rel="stylesheet"/>
             <!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -31,47 +32,35 @@
                         </span>
                     </button>
                     <a class="navbar-brand" href="#">
-                        Brand
+                        <img alt="Thiago Rodrigues Logomarca" class="img-responsive" src="assets/shared/image/thiago-rodrigues.png"/>
                     </a>
                 </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a href="#">
-                                Link
+                                Home
                             </a>
                         </li>
-                        <li class="dropdown">
-                            <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button">
-                                Dropdown
-                                <span class="caret">
-                                </span>
+                        <li>
+                            <a href="#">
+                                Minha História
                             </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#">
-                                        Action
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        Another action
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        Something else here
-                                    </a>
-                                </li>
-                                <li class="divider" role="separator">
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        Separated link
-                                    </a>
-                                </li>
-                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Serviços
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Trabalhos Realizados
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Fale Comigo
+                            </a>
                         </li>
                     </ul>
                 </div>
