--- a/index.html
+++ b/index.html
@@ -1,85 +1,245 @@
 <!DOCTYPE html>
-<html lang="">
-    <head>
-        <meta charset="utf-8">
-            <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-            <meta content="width=device-width, initial-scale=1" name="viewport"/>
-            <title>
-                Thiago Rodrigues
-            </title>
-            <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-            <link href="assets/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet"/>
-            <link href="assets/shared/css/custom.css" rel="stylesheet"/>
-            <!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		<![endif]-->
-        </meta>
-    </head>
-    <body>
+<html lang="pt-br" ng-app="thiagorodrigues">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Thiago Rodrigues</title>
+
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/custom.css">
+
+    <script src="js/lib/angular.min.js"></script>
+    <script src="js/main.js"></script>
+</head>
+<body>
+    <header>
         <nav class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-                        <span class="sr-only">
-                            Toggle navigation
-                        </span>
-                        <span class="icon-bar">
-                        </span>
-                        <span class="icon-bar">
-                        </span>
-                        <span class="icon-bar">
-                        </span>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#">
-                        <img alt="Thiago Rodrigues Logomarca" class="img-responsive" src="assets/shared/image/thiago-rodrigues.png"/>
+                        
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#">
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Minha História
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Serviços
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Trabalhos Realizados
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Fale Comigo
-                            </a>
-                        </li>
+                        <li class=""><a href="#">Home</a></li>
+                        <li class=""><a href="#">Sobre</a></li>
+                        <li class=""><a href="#">Habilidades</a></li>
+                        <li class=""><a href="#">Trabalhos Realizados</a></li>
+                        <li class=""><a href="#">Entre em Contato</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+    </header>
+
+    <section id="slider">
+
+    </section>
+
+    <section id="sobre">
+        <div class="titulo">
+            <div class="container">
+                <h1>Sobre</h1>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="well">
-                        <img alt="Thiago Rodrigues" class="" src=""/>
-                    </div>
-                </div>
                 <div class="col-sm-8">
+                    
+                </div>
+                <div class="col-sm-4">
+                    <img src="" class="" alt=""/>
                 </div>
             </div>
         </div>
-        <script src="//code.jquery.com/jquery.js">
-        </script>
-        <script src="bootstrap/js/bootstrap.min.js">
-        </script>
-    </body>
+    </section>
+
+    <section id="servicos">
+        <div class="titulo">
+            <div class="container">
+                <h1>Minhas Habilidades</h1>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 servico">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <i class="fa fa-desktop"></i>
+                        </div>
+                        <div class="col-sm-8">
+                            <h2>Criação de Sites</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 servico">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <i class="fa fa-desktop"></i>
+                        </div>
+                        <div class="col-sm-8">
+                            <h2>Criação de Sites</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 servico">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <i class="fa fa-desktop"></i>
+                        </div>
+                        <div class="col-sm-8">
+                            <h2>Criação de Sites</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 servico">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <i class="fa fa-desktop"></i>
+                        </div>
+                        <div class="col-sm-8">
+                            <h2>Criação de Sites</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 servico">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <i class="fa fa-desktop"></i>
+                        </div>
+                        <div class="col-sm-8">
+                            <h2>Criação de Sites</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 servico">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <i class="fa fa-desktop"></i>
+                        </div>
+                        <div class="col-sm-8">
+                            <h2>Criação de Sites</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="trabalhos">
+        <div class="titulo">
+            <div class="container">
+                <h1>Trabalhos Realizados</h1>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 trabalho">
+                    <img src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" class="img-responsive" alt="" />
+                    <h2>Nome do Cliente</h2>
+                </div>
+                <div class="col-sm-4 trabalho">
+                    <img src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" class="img-responsive" alt="" />
+                    <h2>Nome do Cliente</h2>
+                </div>
+                <div class="col-sm-4 trabalho">
+                    <img src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" class="img-responsive" alt="" />
+                    <h2>Nome do Cliente</h2>
+                </div>
+                <div class="col-sm-4 trabalho">
+                    <img src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" class="img-responsive" alt="" />
+                    <h2>Nome do Cliente</h2>
+                </div>
+                <div class="col-sm-4 trabalho">
+                    <img src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" class="img-responsive" alt="" />
+                    <h2>Nome do Cliente</h2>
+                </div>
+                <div class="col-sm-4 trabalho">
+                    <img src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" class="img-responsive" alt="" />
+                    <h2>Nome do Cliente</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contato">
+        <div class="titulo">
+            <div class="container">
+                <h1>Entre em Contato</h1>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8">
+                    <form>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <input type="text" class="form-control input-lg" name="" id="" placeholder="Nome">
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control input-lg" name="" id="" placeholder="E-mail">
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control input-lg" name="" id="" placeholder="Telefone">
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <input type="text" class="form-control input-lg" name="" id="" placeholder="Assunto">
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <textarea name="" class="form-control input-lg" rows="5" placeholder="Mensagem"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <button type="submmit" class="btn btn-primary btn-lg">
+                                    Enviar Mensagem
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-sm-4"></div>
+            </div>
+
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer">
+            <div class="container"></div>
+        </div>
+        <div class="copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p>2017 &copy; Todos os Direitos Reservados.</p>
+                    </div>
+                    <div class="col-sm-6">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+</body>
 </html>
