--- a/index.html
+++ b/index.html
@@ -1,242 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt-br" ng-app="thiagorodrigues">
+<!doctype html>
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Thiago Rodrigues</title>
-
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/custom.css">
-
-    <script src="js/lib/angular.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/controllers/trabalhos.js"></script>
-    <script src="js/directives/minhas-diretivas.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Gestao Pessoal</title>
+    <base href="/">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">
-                        <img src="imagens/thiago-rodrigues.png" alt="Thiago Rodrigues"/>
-                    </a>
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class=""><a href="#">Home</a></li>
-                        <li class=""><a href="#">Sobre</a></li>
-                        <li class=""><a href="#">Serviços</a></li>
-                        <li class=""><a href="#">Trabalhos Realizados</a></li>
-                        <li class=""><a href="#">Entre em Contato</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <section id="slider">
-
-    </section>
-
-    <section id="sobre">
-        <div class="titulo">
-            <div class="container">
-                <h1>Sobre</h1>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8">
-                    
-                </div>
-                <div class="col-sm-4">
-                    <img src="" class="" alt=""/>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="servicos">
-        <div class="titulo">
-            <div class="container">
-                <h1>Serviços</h1>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 servico">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <i class="fa fa-desktop"></i>
-                        </div>
-                        <div class="col-sm-8">
-                            <h2>Criação de Sites</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 servico">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <i class="fa fa-desktop"></i>
-                        </div>
-                        <div class="col-sm-8">
-                            <h2>Criação de Sites</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 servico">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <i class="fa fa-desktop"></i>
-                        </div>
-                        <div class="col-sm-8">
-                            <h2>Criação de Sites</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 servico">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <i class="fa fa-desktop"></i>
-                        </div>
-                        <div class="col-sm-8">
-                            <h2>Criação de Sites</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 servico">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <i class="fa fa-desktop"></i>
-                        </div>
-                        <div class="col-sm-8">
-                            <h2>Criação de Sites</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 servico">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <i class="fa fa-desktop"></i>
-                        </div>
-                        <div class="col-sm-8">
-                            <h2>Criação de Sites</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="trabalhos" ng-controller="TrabalhosController">
-        <div class="titulo">
-            <div class="container">
-                <h1>Trabalhos Realizados</h1>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <meu-painel ng-repeat="projeto in projetos | filter: filtro" titulo="{{projeto.titulo}}">
-                    <img src="{{projeto.url}}" class="img-responsive" alt="{{projeto.titulo}}" />
-                </meu-painel>
-            </div>
-        </div>
-    </section>
-
-    <section id="contato">
-        <div class="titulo">
-            <div class="container">
-                <h1>Entre em Contato</h1>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8">
-                    <form>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="form-group">
-                                    <input type="text" class="form-control input-lg" name="" id="" placeholder="Nome">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control input-lg" name="" id="" placeholder="E-mail">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control input-lg" name="" id="" placeholder="Telefone">
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-group">
-                                    <input type="text" class="form-control input-lg" name="" id="" placeholder="Assunto">
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <div class="form-group">
-                                    <textarea name="" class="form-control input-lg" rows="5" placeholder="Mensagem"></textarea>
-                                </div>
-                            </div>
-                            <div class="col-sm-12">
-                                <button type="submmit" class="btn btn-primary btn-lg">
-                                    Enviar Mensagem
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-sm-4">
-                    <div class="row">
-                        <div class="col-sm-2">
-                            <i class="fa fa-phone"></i>
-                        </div>
-                        <div class="col-sm-10">
-                            <strong>Telefone</strong>
-                            <p>(31) 99114 - 7761</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-2">
-                            <i class="fa fa-envelope"></i>
-                        </div>
-                        <div class="col-sm-10">
-                            <strong>E-mail</strong>
-                            <p>falecom@thiagodev.com.br</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <footer>
-        <div class="footer">
-            <div class="container"></div>
-        </div>
-        <div class="copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <p>2017 &copy; Todos os Direitos Reservados.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-</body>
+<app-root></app-root>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
